# k8-18

./: .gitignore  CMakeLists.txt  build.py  cpu.circ  cpu.circtmpl  cpu_evolution.circ
cmake/: CMakeLists.txt
emu/inc/: bus.h  cpu.h  devs.h  log.h  mic_instr_bits.h
emu/src/: bus.cpp  cpu.cpp  log.cpp  mic_instr_bits.cpp
emu/src/devs/: ram.cpp
logisim-comps/: .gitignore  pom.xml
logisim-comps/src/main/java/org/k818/logisim/comps/: Components.java  Microcode.java  MicrocodeRom.java  Rom.java  RomContents.java
mas/: CMakeLists.txt  doc.md
mas/examples/brainfuck/: 1.bf  mc.mas
mas/examples/new architecture/: mc.mas
mas/inc/: cursor.h  diagn.h  pass1.h  pass2.h
mas/src/: cursor.cpp  diagn.cpp  main.cpp  mic_instr_bits.cpp  pass1.cpp  pass2.cpp
